--- a/assets/scss/default/_variables.scss
+++ b/assets/scss/default/_variables.scss
@@ -6,6 +6,7 @@
     --color-offset: #006452;
     --color-secondary: #d09d3a;
     --color-accent: #05816b;
+    --light-green: #00be94;
 
     --border-color: #005b4b21;
 
